external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_mut_3.exp
error[E01002]: unexpected token
   ┌─ tests/move_2024/matching/invalid_mut_3.move:11:28
   │
11 │             mut Maybe::Just(_) => (),
   │                            ^
   │                            │
   │                            Unexpected '('
   │                            Expected '=>'

